package enums;

public enum Especialidad {
    Cardiología,
    Neurología,
    Kinesiología
}
