package enums;

public enum EstadoFinanciero {
    Pendiente,
    Abonado,
    Cancelado
}
