package financiación;

public abstract class EntidadFinanciera {
    private int id;
    public int cuit;
    public int idCBU;

    public int getId() {
        return id;
    }
}
