package usuarios;

public class Contacto extends Usuario {
    //TODO
}
