package usuarios;

public class Medico extends Usuario {
    //TODO
}
