@startuml

class BDD {
    +turnos: Dictionary<int id, Turno>
    +turnosPendientes: Dictionary<int id, Turno>
    +prestaciones: Dictionary<int id, Prestacion>
    +pacientes: Dictionary<int id, Pacientes>
    +laboratorios: Dictionary<int id, Laboratorio>
    +idEntidadDeFinanciacion: Dictionary<int id, financiación.EntidadFinanciera>
    +idCBU: Dictionary<int id, String>
}

class TablaDatos {

    -datos: ArrayList<Object>

    +addDato(Object obj): void
    +getDatos(): ArrayList<Object>
    +getDato(int id): Object
    +reemplazar(int id, Object dato): void
}

class GestionTurnos {
    {static} -instance: GestionTurnos
    -GestionTurnos

    +getInstance(): GestionTurnos

    +fechasDisponibles(enums.Especialidad especialidad): List<Date>

    +registrarTurno(Turno nuevoTurno): void
    +actualizarTurno(int idTurno, Turno nuevoTurno): void
    +cancelarTurno(int idTurno);

    +turnosCreadosPor(int idAdministrativo): List<Turno>

    +reportarAusenciasConsecutivas(int idAdministrativo)): void

    +generarSobreTurno(int idTurno, Turno sobreTurno):
}

class GestionContactos {
    {static} -instance: GestionContactos
    -GestionContactos

    +getInstance(): GestionContactos

    +pedirTurno(int idPaciente, Mensaje mensaje)
    +enviarMailAlUsuario(Mensaje mensaje, int idUsuario)
    +enviarSMSAlUsuario(StrMensajeing mensaje, int idUsuario)
}

class GestionPrestaciones {
    {static} -instance: GestionPrestaciones
    
    +getInstance(): GestionPrestaciones

    +registrarPrestacion(Prestacion prestacion): void
    +actualizarPrestacion(int idPrestacion, Prestacion nuevaPrestacion): void
    +cancelarPrestacion(int idPrestacion): void

    +generarReporteMensual(): void
}

class GestionFinanciera {
    {static} -instance: GestionFinanciera
    -GestionFinanciera

    +getInstance(): GestionFinanciera

    +abonarPrestacion(int idPrestacion)
}

class Prestacion {
    +idMedicoACargo: int
    +idPaciente: int
    +diagnostico: Diagnostico
    +asistencia: Bool
    +estado: enums.EstadoFinanciero

    +tratamientosAsignados: List<Tratamiento>
    +medicacionAsignada: List<Medicacion>
    +estudiosRealizados: List<Estudio>

    +costoDePrestacion(): float
}

enum enums.EstadoFinanciero {
    Pendiente,
    Abonado,
    Cancelado
}

enum enums.Especialidad {
    Cardiología,
    Neurología,
    Kinesiología
}

class Mensaje {
    +titulo: String
    +descripcion: String
    +fechaEnvio: Date
}

class AreaMedica {
    +coordinador: Medico
    +equipoMedico: List<Medico>
}

class Turno {
    +id: int
    +idPaciente: int
    +especialidad: enums.Especialidad
    +laboratorio: idLaboratorio
    +consultorio: idConsultorio

    +horaInicio: Date
    +horaFinalizacion: Date

    +crearTurno(Paciente usuario, Date fechaInicio, Date fechaFin): Turno
}

class Contacto {
    +email: String
    +numero: String

    +enviarAlCorreo(Mensaje mensaje)
    +enviarSMS(Mensaje mensaje)
}

abstract class Usuario {
    -id: int
    +nombres List<String>
    +apellidos: List<String>
    +genero: Genero
    +cuit: int

    +idEntidadDeFinanciacion: int

    +contacto: Contacto
    +getId(): int
}

abstract class financiación.EntidadFinanciera {
    -id: int
    +cuit: int
    +idCBU: int

    +getId(): int
    'ObraSocial,
    'Prepaga,
    'Particular
}



class Medico {
    -idPacientes: List<int>

    +historiaClinicaDePaciente(int id): HistoriaClinica

    +pedirTurno(Turno turno, int idPaciente): void
    +registrarPrestacion(Prestacion prestacion): void
    +cancelarPrestacion(id idPrestacion): void
}

class Administrativo {
    +aprobarTurno(int idTurno): void
    +rechazarTurno(int idTurno): void

    +generarTurno(Turno turno): void
    +actualizarTurno(id idTurno, Turno nuevoTurno): void
    +cancelarTurno(id idTurno): void
    +generarSobreTurno(id idTurno, Turno nuevoTurno): void
}
class Paciente {
    +pedirTurno(Turno turno): void
    +verHistoriaClinica(): HistoriaClinica
}

' Herencias
Usuario <|-- Paciente
Usuario <|-- Administrativo
Usuario <|-- Medico

' Composicion
GestionTurnos *-- Turno
GestionPrestaciones *-- Prestacion
Usuario *-- Contacto

' Uso de metodos
'Administrativo ..> GestionTurnos
'Administrativo ..> GestionContactos

' Uso de administracion.BDD
BDD <..> GestionTurnos
BDD <..> GestionContactos
BDD <..> GestionPrestaciones
BDD *-- TablaDatos

@enduml